[package]
name = "v3-event-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# External
tokio = { version = "1.17.0", features = ["macros"] }
eyre = "0.6.6"
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }